test_error.log
   Compiling oc-token-optim v0.1.0 (C:\Users\czhu6\gh\MOON)
warning: unused import: `tempfile::tempdir`
 --> tests\moon_recall_test.rs:3:5
  |
3 | use tempfile::tempdir;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: function `write_fake_qmd` is never used
 --> tests\moon_recall_test.rs:5:4
  |
5 | fn write_fake_qmd(bin_path: &Path, payload: &str) {
  |    ^^^^^^^^^^^^^^
  |
  = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `tempfile::tempdir`
 --> tests\moon_index_test.rs:3:5
  |
3 | use tempfile::tempdir;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: function `write_fake_qmd` is never used
 --> tests\moon_index_test.rs:5:4
  |
5 | fn write_fake_qmd(bin_path: &Path, log_path: &Path) {
  |    ^^^^^^^^^^^^^^
  |
  = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: function `write_fake_qmd_add_conflict_then_update` is never used
  --> tests\moon_index_test.rs:20:4
   |
20 | fn write_fake_qmd_add_conflict_then_update(bin_path: &P...
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: function `write_fake_qmd_add_conflict_then_recreate` is never used
  --> tests\moon_index_test.rs:44:4
   |
44 | fn write_fake_qmd_add_conflict_then_recreate(bin_path: ...
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: `oc-token-optim` (test "moon_recall_test") generated 2 warnings (run `cargo fix --test "moon_recall_test" -p oc-token-optim` to apply 1 suggestion)
warning: `oc-token-optim` (test "moon_index_test") generated 4 warnings (run `cargo fix --test "moon_index_test" -p oc-token-optim` to apply 1 suggestion)
error[E0308]: mismatched types
    --> src\moon\distill.rs:1758:48
     |
1758 |         let keywords = super::extract_keywords(text);
     |                        ----------------------- ^^^^ expected `&[ProjectionEntry]`, found `&str`
     |                        |
     |                        arguments to this function are incorrect
     |
     = note: expected reference `&[ProjectionEntry]`
                found reference `&str`
note: function defined here
    --> src\moon\distill.rs:702:4
     |
 702 | fn extract_keywords(entries: &[ProjectionEntry]) -> Vec<String> {
     |    ^^^^^^^^^^^^^^^^ ---------------------------

For more information about this error, try `rustc --explain E0308`.
error: could not compile `oc-token-optim` (bin "MOON" test) due to 1 previous error
